fix(sortable-list): fix vertical alignment (#2207)

--- a/packages/sortable-list/src/components/item/index.module.css
+++ b/packages/sortable-list/src/components/item/index.module.css
@@ -38,6 +38,10 @@
 .icon {
     flex-shrink: 0;
     color: var(--color-light-neutral-translucent-700);
+
+    & .dragIcon {
+        vertical-align: middle;
+    }
 }
 
 .dragging {
